TAG: littriageload-6-0-17-22
DATE: 01/05/2022
STAFF: lec
wts2-450/LTLO: Reviews are underlabeled in the database (TR13043)
#       littriageload.config.default
#       bin/processPubMedReview.py
#       bin/processPubMedReview.sh

TAG: littriageload-6-0-17-21
TAG: littriageload-6-0-17-20
DATE: 12/28/2021
STAFF: sc
YAKS-439 - Update Relevance Classifier wrapper script in littriageload
a) updateRelevance.py - don't execute sql file if empty
b) processRelevance.sh - use DLAJOBSTREAMFUNCTIONS checkStatus for each call to
   exit gracefully on failure

TAG: littriageload-6-0-17-19
TAG: littriageload-6-0-17-18
DATE: 12/28/2021
STAFF: lec
wts2-753/littriageload exception on reference w/ null title

TAG: littriageload-6-0-17-17
TAG: littriageload-6-0-17-16
TAG: littriageload-6-0-17-15
TAG: littriageload-6-0-17-14
DATE: 11/30/2021
STAFF: lec
wts2-687/archiving files for PRO auto-triagesh fix
#       processSecondary.sh
#       secondary.py
#       PRO_extracted_text.sql
#       PRO_ignored_text.sql
#       secondaryReports.csh

TAG: littriageload-6-0-17-13
DATE: 09/22/2021
STAFF: lec
wts2-702/littriageload: littriage_NLML_refresh fix

TAG: littriageload-6-0-17-12
DATE: 09/14/2021
STAFF: lec
wts2-685/Secondary triage script for auto-Routing for Tumor needs adjusting

TAG: littriageload-6-0-17-11
DATE: 07/26/2021
STAFF: lec
littriageload.py/do not attach to diagFile; abstract may contain 'fail' which gets reported by Dave's checker

TAG: littriageload-6-0-17-10
DATE: 06/10/2021
STAFF: lec
wts2-649/littriageload/littriage_noctua/littriage_goa/J:# & Relevance

TAG: littriageload-6-0-17-9
TAG: littriageload-6-0-17-8
DATE: 06/07/2021
STAFF: lec
post build 39
1. missing : New Failed PDF's in Needs_Review folder: 0
2. Literature Triage Level 0 Errors : duplicate PDF file name 

TAG: littriageload-6-0-17-7
DATE: 06/03/2021
STAFF: lec
b39-509/Lit Triage load issue/findNLMrefresh.sh

TAG: littriageload-6-0-17-6
DATE: 05/25/2021
STAFF: lec